--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-beta.13",
     "@mui/lab": "^5.0.0-alpha.152",
     "@mui/material": "^5.14.16",
+    "@mui/x-data-grid": "^6.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.1"
