--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-data-grid": "^6.18.1",
     "@mui/x-date-pickers": "^6.18.1",
     "@mui/x-date-pickers-pro": "^6.18.1",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.1"
