--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@mui/x-data-grid": "^6.18.1",
     "@mui/x-date-pickers": "^6.18.1",
     "@mui/x-date-pickers-pro": "^6.18.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
